@@ -3,6 +3,8 @@
 	  - added gen_report function (code copied from src/aide.c)
     * src/aide.c:
 	  - removed code copied to src/compare_db.c
+	* include/compare_db.h:
+	  - removed report_tree function
 
 2010-12-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c:
